--- a/thankyou.html
+++ b/thankyou.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -27,6 +28,8 @@
 <div class="box">
   <h1 id="title">Thank you 🙏</h1>
   <p id="desc">You’re officially an early backer.</p>
+  <p id="discord"></p>
+  <p id="email"></p>
 </div>
 
 <script>
